[package]
name = "particlez"
version = "0.1.0"
edition = "2021"
description = "blazingly fast particle sandbox"
repository = "https://github.com/rxn7/particlez"
license = "MIT"

[profile.dev]
opt-level = 1
overflow-cheks = false

[profile.release]
opt-level = 2
strip = "debuginfo"
overflow-cheks = false

[dependencies]
fontdue = "0.8.0"
glam = {version="0.25.0", features=["fast-math"]}
minifb = "0.25.0"
rand = "0.8.5"
